# helios-career-operations-system

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENT_HANDOFF_PROMPT.md  BMAD-Project-Reorganization-Plan.md  BMAD-SETUP-COMPLETE.md  BMAD_PHASE_4_TECHNICAL_HANDOFF.md  BMAD_Recovery_action_plan.md  CLAUDE.md  CONTRIBUTING.md  DEV_HANDOFF_FIXES.md  DynamicResearchEngine.yml  FINAL_VALIDATION_REPORT.md  README.md  SECURITY_ANALYSIS_TODO.md  VERIFICATION_AUDIT_REPORT.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_commit.txt  test_enhanced.py  validation_results.txt
.bmad-core/: core-config.yaml.bak  install-manifest.yaml
.claude/: settings.local.json
.githooks/: post-commit  post-commit-bmad  pre-commit  setup_hooks.sh
.github/workflows/: ci.yaml  codeql.yml  docs.yml  integration-tests.yml  orchestrator-ci.yml  python-ci.yml
.pre-commit-hooks/: generate-docs.py
bmad-core/: VERIFICATION_SYSTEM_IMPLEMENTATION_PROOF.md  core-config.yaml  verification-protocols.yaml
bmad-core/agents/: analyst.yaml  dev-agent.yaml  orchestrator.yaml  profile-ingestor.yaml  qa-agent.yaml  strategist.yaml
bmad-core/config/: datetime_config.yaml
bmad-core/scripts/: enhanced-verification.py  health-check-all.py  verify-agent.py  verify-dependencies.py  verify-service-status.py
bmad-core/tasks/: validate-next-story.md
bmad-core/templates/: helios-agent-tmpl.yaml
bmad-core/utils/: __init__.py  documentation_timestamps.py  internet_datetime.py  requirements.txt
bmad-core/verification-protocols/: service-verification-checklist.md
bmad-core/verification-results/: orchestrator-dependencies-2025-09-06.json  orchestrator-dependencies-2025-09-08.json  profile-ingestor-dependencies-2025-09-06.json  profile-ingestor-dependencies-2025-09-20.json  service-status-20250906-212534.json  service-status-20250906-212716.json
bmad-core/workflows/: helios-development-workflow.md
data/: skill_map.json
docs/: Brownfield_remediation_plan.md  IMPORTANT.md  architecture.md  epic_overview.md  implementation_notes.md  index.html  intelligent resume data extractor.md  mvp-backlog-report.md  requirements_snapshot.md  story_1_1_setup.md  story_1_2_ingestion.md  story_1_3_parser.md  story_1_4_conflict.md  story_1_5_skillmap.md  story_1_6_elicitation.md  story_1_7_output.md  validation_report.json
docs/01-requirements/: Epic-Breakdown-User-Stories.md  PRD-Helios-Career-Operations-System.md  epic-1-foundation.md  epic-2-intelligence.md  epic-3-generation.md
docs/02-architecture/: Architecture-Document.md  coding-standards.md  database-migration-procedures.md  service-rollback-procedures.md  source-tree.md  tech-stack.md
docs/03-design/: BMAD-Analysis.md
docs/04-implementation/: Integration-Guide.md  integration-points-analysis.md
docs/07-operations/: database-migration-risk-assessment.md  rollback-procedures.md
docs/api/: README.md  cross-service-reference.html  index.html  verified-endpoints-summary.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/config/: pydoc.conf
docs/pre-draft/: Initial PRD Draft.md  architecture.md
docs/stories/: 2.1.helios-orchestrator.md  2.2.strategist-service.md  2.3.analyst-service.md  2.4.architect-service.md  MVP-Sequential-4Week-Plan.md
infrastructure/k8s/: alerting.yaml  analyst.yaml  configmap.yaml  grafana.yaml  monitoring.yaml  namespace.yaml  orchestrator.yaml  postgres.yaml  profile-ingestor.yaml  redis.yaml  secrets.yaml  strategist.yaml
knowledge-base/agent-knowledge/: Knowledge_Document_1_PROFILE_INGESTOR.md  Knowledge_Document_3_ANALYST.md  Knowledge_Document_5_EDITOR.md  The_Strategic_Career_Co-Pilot_A_Complete_Playbook.md  Ultimate Strategic Resume Intelligence System.md
knowledge-base/context _engineering knowledge/: Advanced Context Engineering for Agents.md  (+3 more)
output/: .backup_1672574400.0.json  master_career_database.json
resume_extractor/: __init__.py
scripts/: docs.bat  docs.sh  generate_all_docs.py  generate_docs.py  generate_story_docs.py  serve_docs.py  setup_bmad_automation.py  setup_bmad_automation_simple.py  setup_pre_commit.py  validate_docs.py  watch_docs.py
services/profile-ingestor/: Dockerfile  pyproject.toml  requirements.txt  setup.py  src.resume_extractor.__init__.html  src.resume_extractor.components.__init__.html  src.resume_extractor.schemas.__init__.html
services/profile-ingestor/data/: skill_map.json
services/profile-ingestor/output/: .backup_1672574400.0.json  .backup_1757318384.331754.json  .backup_1757354273.590243.json  .backup_1758395318.121519.json  .backup_1758416385.208999.json  master_career_database_20250908_075944.json  master_career_database_20250908_175753.json  master_career_database_20250908_180300.json
services/profile-ingestor/src/: health_server.py  main.py
services/profile-ingestor/src/resume_extractor/: __init__.py  pipeline.py
services/profile-ingestor/src/resume_extractor/components/: __init__.py  consolidation.py  ingestion.py  output_generator.py  parsing.py
services/profile-ingestor/src/resume_extractor/ui/: elicitation.py
services/profile-ingestor/src/ui/: conflict_resolver.py
services/profile-ingestor/src/utils/: logging_config.py
services/profile-ingestor/tests/: performance_test.py  test_conflict_resolver.py  test_consolidation_skills.py  test_elicitation.py  test_logging.py  test_output_generator.py  test_pipeline.py  test_skill_mapper.py
services/profile-ingestor/tests/sample_resumes/: sample_resume_en.txt  sample_resume_fr.md
services/profile-ingestor/tests/sample_resumes/english/: resume_1.txt  resume_2.json  resume_3.md
services/profile-ingestor/tests/sample_resumes/french/: cv_1.txt  cv_2.yml
services/profile-ingestor/tests/sample_resumes/mixed/: bilingual_resume.json
tests/: performance_test.py  test_conflict_resolver.py  test_consolidation_skills.py  test_ingestion.py  test_integration_ingestion.py  test_logging.py  test_output_generator.py  test_parsing.py  test_parsing_implementation.py  test_skill_mapper.py
(+567 files in other folders)
