[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-extractor"
version = "1.0.0"
description = "Profile Ingestor Service - Resume data extraction and consolidation"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Helios Career Operations System"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "spacy>=3.8.0",
    "questionary>=2.1.0",
    "pypdf>=4.5.1",
    "python-docx>=1.2.0",
    "PyYAML>=6.0.0",
    "mistune>=3.1.0",
    "langdetect>=1.0.9",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
    "jsonschema>=4.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.5",
]

[project.scripts]
resume-extractor = "resume_extractor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"